Delete unused code & resolve a bunch of other warnings